[gd_scene load_steps=22 format=2]

[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/smart_ui_nodes/smart_checkbox/smart_checkbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/smart_ui_nodes/smart_button/smart_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/Themes/Fonts/m6x11.tres" type="DynamicFont" id=4]
[ext_resource path="res://Levels/Level Resources/world_tiles/nothing.png" type="Texture" id=5]
[ext_resource path="res://UI/options/options.gd" type="Script" id=6]



[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StreamTexture" id=2]
load_path = "res://.import/checked.png-43dcb5b7b40b17ae69db2dc57e4c666a.stex"

[sub_resource type="StreamTexture" id=3]
load_path = "res://.import/unchecked.png-d1b553b995e31e6f45a00da2842c20fe.stex"

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxLine" id=5]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0

[sub_resource type="StreamTexture" id=6]
load_path = "res://.import/stylebox_box.png-78ed92f8760aaa95245fdfee59a844ba.stex"

[sub_resource type="StyleBoxTexture" id=7]
texture = SubResource( 6 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 2.37449
margin_right = 2.12428
margin_top = 2.24938
margin_bottom = 2.24938

[sub_resource type="StreamTexture" id=8]
load_path = "res://.import/stylebox_empty.png-74caf9003b696c78fc2a554e13b346de.stex"

[sub_resource type="StyleBoxTexture" id=9]
texture = SubResource( 8 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0
axis_stretch_vertical = 1

[sub_resource type="StreamTexture" id=10]
load_path = "res://.import/stylebox_full.png-96e760ed1d37c29b6da89492331cb96b.stex"

[sub_resource type="StyleBoxTexture" id=11]
texture = SubResource( 10 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 3.0
margin_right = 3.0
margin_top = 3.0
margin_bottom = 3.0
axis_stretch_vertical = 1

[sub_resource type="StreamTexture" id=12]
load_path = "res://.import/stylebox_selected_box.png-ccf77f2ab10b912828ca4264a91ea5f9.stex"

[sub_resource type="StyleBoxTexture" id=13]
texture = SubResource( 12 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 2.12428
margin_right = 2.24938
margin_top = 1.99918
margin_bottom = 2.12428
axis_stretch_vertical = 1

[sub_resource type="StyleBoxLine" id=14]
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0
vertical = true

[sub_resource type="Theme" id=15]
default_font = ExtResource( 4 )
Button/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
Button/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
Button/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
Button/colors/font_color_pressed = Color( 1, 1, 1, 1 )
Button/constants/hseparation = 2
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 1 )
Button/styles/hover = null
Button/styles/normal = null
Button/styles/pressed = null
CheckBox/colors/font_color = Color( 0.88, 0.88, 0.88, 1 )
CheckBox/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
CheckBox/colors/font_color_hover = Color( 0.94, 0.94, 0.94, 1 )
CheckBox/colors/font_color_hover_pressed = Color( 1, 1, 1, 1 )
CheckBox/colors/font_color_pressed = Color( 1, 1, 1, 1 )
CheckBox/constants/check_vadjust = 0
CheckBox/constants/hseparation = 4
CheckBox/fonts/font = null
CheckBox/icons/checked = SubResource( 2 )
CheckBox/icons/radio_checked = null
CheckBox/icons/radio_unchecked = null
CheckBox/icons/unchecked = SubResource( 3 )
CheckBox/styles/disabled = null
CheckBox/styles/focus = SubResource( 4 )
CheckBox/styles/hover = null
CheckBox/styles/hover_pressed = null
CheckBox/styles/normal = null
CheckBox/styles/pressed = null
HSeparator/constants/separation = 1
HSeparator/styles/separator = SubResource( 5 )
Icons/icons/close = null
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/constants/line_spacing = 3
Label/constants/shadow_as_outline = 0
Label/constants/shadow_offset_x = 1
Label/constants/shadow_offset_y = 1
Label/fonts/font = ExtResource( 4 )
Label/styles/normal = null
Panel/styles/panel = SubResource( 7 )
PanelContainer/styles/panel = SubResource( 7 )
ProgressBar/colors/font_color = Color( 0, 0, 0, 1 )
ProgressBar/colors/font_color_shadow = Color( 1, 1, 1, 1 )
ProgressBar/fonts/font = null
ProgressBar/styles/bg = SubResource( 9 )
ProgressBar/styles/fg = SubResource( 11 )
TabContainer/colors/font_color_bg = Color( 1, 1, 1, 1 )
TabContainer/colors/font_color_disabled = Color( 1, 0, 0, 0.45098 )
TabContainer/colors/font_color_fg = Color( 1, 1, 1, 0.752941 )
TabContainer/constants/hseparation = 0
TabContainer/constants/label_valign_bg = 0
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 0
TabContainer/constants/top_margin = 0
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 7 )
TabContainer/styles/tab_bg = SubResource( 7 )
TabContainer/styles/tab_disabled = SubResource( 9 )
TabContainer/styles/tab_fg = SubResource( 13 )
TooltipLabel/colors/font_color = Color( 1, 1, 1, 1 )
TooltipLabel/colors/font_color_shadow = Color( 0, 0, 0, 0.1 )
TooltipLabel/constants/shadow_offset_x = 1
TooltipLabel/constants/shadow_offset_y = 1
TooltipLabel/fonts/font = null
VSeparator/constants/separation = 1
VSeparator/styles/separator = SubResource( 14 )

[node name="options" type="Control"]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tabs" type="TabContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -182.0
margin_top = -98.0
margin_right = 182.0
margin_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbour_left = NodePath("General")
focus_neighbour_right = NodePath("Exit")
theme = SubResource( 15 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Visual" type="VBoxContainer" parent="tabs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.37449
margin_top = 12.2494
margin_right = -2.12428
margin_bottom = -2.24938
alignment = 1
__meta__ = {
"_edit_lock_": true
}

[node name="smooth" parent="tabs/Visual" instance=ExtResource( 2 )]
margin_top = 23.0
margin_right = 359.0
margin_bottom = 47.0
shortcut_in_tooltip = false
text = "Smooth camera"

[node name="hidebar" parent="tabs/Visual" instance=ExtResource( 2 )]
margin_top = 51.0
margin_right = 359.0
margin_bottom = 75.0
shortcut_in_tooltip = false
text = "Hide item bar when empty"

[node name="fullscreen" parent="tabs/Visual" instance=ExtResource( 2 )]
margin_top = 79.0
margin_right = 359.0
margin_bottom = 103.0
shortcut_in_tooltip = false
text = "Fullscreen"

[node name="pixel" parent="tabs/Visual" instance=ExtResource( 2 )]
margin_top = 107.0
margin_right = 359.0
margin_bottom = 131.0
text = "Pixel perfect filter (not recomended)"

[node name="Audio" type="VBoxContainer" parent="tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.37449
margin_top = 12.2494
margin_right = -2.12428
margin_bottom = -2.24938
alignment = 1

[node name="volume_label" type="Label" parent="tabs/Audio"]
margin_top = 53.0
margin_right = 359.0
margin_bottom = 67.0
text = "Volume (50%)"
align = 1
valign = 1

[node name="volume" type="HSlider" parent="tabs/Audio"]
margin_top = 71.0
margin_right = 359.0
margin_bottom = 87.0
custom_icons/grabber_highlight = ExtResource( 5 )
custom_icons/grabber = ExtResource( 5 )
custom_styles/slider = SubResource( 7 )
custom_styles/grabber_area_highlight = SubResource( 13 )
custom_styles/grabber_area = SubResource( 13 )
value = 50.0
allow_greater = true
allow_lesser = true
ticks_on_borders = true

[node name="Game" type="VBoxContainer" parent="tabs"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.37449
margin_top = 12.2494
margin_right = -2.12428
margin_bottom = -2.24938
alignment = 1

[node name="perfection" parent="tabs/Game" instance=ExtResource( 2 )]
margin_top = 58.0
margin_right = 359.0
margin_bottom = 82.0
shortcut_in_tooltip = false
text = "Perfection Mode"

[node name="exit" parent="." instance=ExtResource( 3 )]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -27.0
margin_right = -10.0
margin_bottom = -7.0
theme = SubResource( 15 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 7 )
custom_styles/normal = SubResource( 7 )
text = "Exit"

[node name="sound_player" parent="." instance=ExtResource( 1 )]
[connection signal="tab_changed" from="tabs" to="." method="_on_tabs_tab_changed"]
[connection signal="visibility_changed" from="tabs" to="." method="_on_tabs_visibility_changed"]
[connection signal="value_changed" from="tabs/Audio/volume" to="." method="_on_volume_value_changed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
